--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="rightButton"><![CDATA[->]]></string>
     <string name="leftButton"><![CDATA[<-]]></string>
+    <string name="finish">Finish</string>
 </resources>
