--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="rightButton"><![CDATA[->]]></string>
     <string name="leftButton"><![CDATA[<-]]></string>
     <string name="finish">Finish</string>
+    <string name="enter">Enter</string>
 </resources>
